RESOLVED FIXED 39222
V8 code generator does not add ENABLE guards around attribute getters and setters
https://bugs.webkit.org/show_bug.cgi?id=39222
Summary V8 code generator does not add ENABLE guards around attribute getters and set...
Steve Block
Reported 2010-05-17 09:31:56 PDT
The V8 code generator does not add ENABLE guards around the static functions used to implement generated attribute getters and setters. This means that when a class has methods which are guarded by an enable flag, and that flag is disabled, the generated code will reference these methods without a guard, causing compile errors. For example, if TOUCH_EVENTS are disabled, ontouchstartAttrGetter() in V8DOMWindow.cpp is generated without guards and calls DOMWindow::ontouchstart(), which is guarded by ENABLE(TOUCH_EVENTS)
Attachments
Patch (3.39 KB, patch)
2010-05-17 13:01 PDT, Steve Block
no flags
Steve Block
Comment 1 2010-05-17 13:01:23 PDT
Nate Chapin
Comment 2 2010-05-17 13:10:41 PDT
Comment on attachment 56258 [details] Patch Ok.
WebKit Commit Bot
Comment 3 2010-05-19 03:48:47 PDT
Comment on attachment 56258 [details] Patch Clearing flags on attachment: 56258 Committed r59757: <http://trac.webkit.org/changeset/59757>
WebKit Commit Bot
Comment 4 2010-05-19 03:48:54 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.