Adds missing ENABLE(TOUCH_EVENTS) guards to Android-specific code

This will allow us to build with touch events disabled once we've merged
https://bugs.webkit.org/show_bug.cgi?id=39222

Change-Id: Ia665e5e6c3b4169b6c5576aa26721d95e72934e9